--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/frenchfries.jpg" alt="">
+                  <img src="images/Popeyes-Cajun-Fries_500x286.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
