--- a/menu.html
+++ b/menu.html
@@ -129,7 +129,7 @@
 
       <ul class="filters_menu"> 
          <li class="active" data-filter="*">All</li>
-        <li data-filter=".appetizers">appetizers</li>
+        <li data-filter=".appetizers">Appetizers</li>
         <li data-filter=".Steaks">Steaks</li>
         <li data-filter=".burger">Burger</li>
        <li data-filter=".pasta">Pasta</li>
@@ -336,7 +336,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/frenchfries.jpg" alt="">
+                  <img src="images/Popeyes-Cajun-Fries_500x286.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -759,7 +759,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/frenchfries.jpg" alt="">
+                  <img src="images/Popeyes-Cajun-Fries_500x286.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
