fixed chicken alfredo
chicken alfredo

--- a/menu.html
+++ b/menu.html
@@ -286,7 +286,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Chicken Alfredo1.png" alt="">
+                  <img src="images/Chicken Alfredo1161197982-612x612_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
