--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Chicken Alfredo1.png" alt="">
+                  <img src="images/Chicken Alfredo1161197982-612x612_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                     Chicken Alfredo
