--- a/menu.html
+++ b/menu.html
@@ -564,7 +564,7 @@
          </div>
 <div class="filters-content">
         <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all burger">
+          <div class="col-sm-6 col-lg-4 all Steaks">
             <div class="box">
               <div>
                 <div class="images">
@@ -572,14 +572,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Black & Blue Burger
+                    Tomahawk
                   </h5>
                   <p>
-                    Lean ground beef cooked to order, blackened, and topped with Bleu cheese crumbles. Served on rye with Swiss, grilled onions, lettuce, and tomato. Finished with bleu cheese dressing
+                    a colossal, bone-in ribeye offering a mouthwatering blend of golden-brown crust, and melt-in-your-mouth tenderness, cooked to your preference.
                   </p>
                   <div class="options">
                     <h6>
-                      $11.49
+                      $54.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -610,24 +610,24 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all burger">
+          <div class="col-sm-6 col-lg-4 all Steak">
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/BBQ Bacon CHeddar Burger1.jpg" alt="">
+                  <img src="images/Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    BBQ Bacon Cheddar Burger
+                    Ribeye
                   </h5>
                   <p>
-                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, and grilled onions on a white bun               
+                    A juicy marbling, mouthwatering tenderness, and robust, beefy flavor, cooked to your preference.              
                     <p>  
                     </p>   
                   </p>   
                   <div class="options">
                     <h6>
-                      $9.99
+                      $29.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -657,22 +657,22 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all salad">
+          <div class="col-sm-6 col-lg-4 all dessert">
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Salad1.jpg" alt="">
+                  <img src="images/Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Mediterranean Salad
+                    Brownie Sundae
                   </h5>
                   <p>
-                    Chopped romaine tossed with vinaigrette dressing, black and green olives, diced tomatoes, red onions, pepperoncini, and topped with Feta cheese
+                    Homemade fudge brownie with vanilla bean ice cream topped with whipped cream and chocolate sauce
                   </p>
                   <div class="options">
                     <h6>
-                      $8.99
+                      $6.95
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -705,22 +705,21 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all pasta">
+          <div class="col-sm-6 col-lg-4 all dessert">
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Chicken Alfredo1.png" alt="">
+                  <img src="images/Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Chicken Alfredo
+                    Funnel Cake
                   </h5>
                   <p>
-                    Grilled chicken breast tossed with homemade Alfredo sauce over fettuccini pasta. Topped with Parmesan cheese
-                  </p>
+                    A  golden-fried delight dusted with powdered sugar and chocolate syrup
                   <div class="options">
                     <h6>
-                      $13.49
+                      $7.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -755,22 +754,22 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all sides">
+          <div class="col-sm-6 col-lg-4 all appetizers">
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Popeyes-Cajun-Fries_500x286.png" alt="">
+                  <img src="images/Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    French Fries
+                    Loaded Tater Tots
                   </h5>
                   <p>
-                    Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
+                    golden-brown crispy tots, cheddar cheese, crispy bacon, green onions, and a side of sour cream
                   </p>
                   <div class="options">
                     <h6>
-                      $3.99
+                      $6.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -801,23 +800,22 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all salad">
+          <div class="col-sm-6 col-lg-4 all appetizers">
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/TacoSalad1.PNG" alt="">
+                  <img src="images/Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Taco Salad
+                    Potato Skins
                   </h5>
                   <p>
-                    Shredded iceberg over tortilla chips, topped with tomatoes, onions, Cheddar cheese, chives, and black olives. Sour cream and salsa on the side. Choice of:
-                    Chicken, Ground Beef
+                    Loaded with Cheddar and Mozzarella cheeses. Sprinkled with bacon bits. Sour cream on the side
                   </p>
                   <div class="options">
                     <h6>
-                      $9.79
+                      $10.49
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
