--- a/menu.html
+++ b/menu.html
@@ -145,7 +145,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/burger1.png" alt="">
+                  <img src="images/Black_n_bleu_burger_500x285.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
