--- a/menu.html
+++ b/menu.html
@@ -136,7 +136,7 @@
         <li data-filter=".salad">Salad</li>        
         <li data-filter=".sides">Sides</li>
         <li data-filter=".dessert">Dessert</li>
-
+        <li data-filter=".drink">Drinks</li>
       </ul>
 
       <div class="filters-content">
@@ -811,7 +811,7 @@
                     Potato Skins
                   </h5>
                   <p>
-                    Loaded with Cheddar and Mozzarella cheeses. Sprinkled with bacon bits. Sour cream on the side
+                    Loaded with Cheddar and Mozzarella cheeses, sprinkled with bacon bits, sour cream on the side.
                   </p>
                   <div class="options">
                     <h6>
@@ -851,14 +851,14 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/PrimeRib1_500x286.jpg" alt="">
+                  <img src="images/Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Prime Rib Sandwich
+                    Chicken Sandwich
                   </h5>
                   <p>
-                    Grilled and blackened ribeye on an onion bun, smothered with sautéed onions and Swiss cheese
+                    A hand breaded chicken breast with your choice of melted sliced cheese, pickles, 
                   </p>
                   <div class="options">
                     <h6>
