--- a/menu.html
+++ b/menu.html
@@ -610,7 +610,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all Steak">
+          <div class="col-sm-6 col-lg-4 all Steaks">
             <div class="box">
               <div>
                 <div class="images">
@@ -858,7 +858,7 @@
                     Chicken Sandwich
                   </h5>
                   <p>
-                    A hand breaded chicken breast with your choice of melted sliced cheese, pickles, 
+                    A hand breaded chicken breast with your choice of sliced melted cheese, and crinkle pickles.
                   </p>
                   <div class="options">
                     <h6>
@@ -892,7 +892,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all burger">
+          <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
                 <div class="">
@@ -900,10 +900,10 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Hickory-Smoked BBQ Pulled Pork
+                    Onion Rings
                   </h5>
                   <p>
-                    Hickory-Smoked BBQ Pulled Pork on a wheat bun with coleslaw on the side
+                    golden-brown rings of sweet, caramelized onions enveloped in a light, crispy batter
                   </p>
                   <div class="options">
                     <h6>
