--- a/menu.html
+++ b/menu.html
@@ -614,7 +614,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/hot-grilled-spare-ribs-with-barbecue-sauce-with-fire-ai-generative_123827-23821_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -661,14 +661,14 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/Chocolate_Lava_Cake_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Brownie Sundae
+                    Chocolate Lava Cake
                   </h5>
                   <p>
-                    Homemade fudge brownie with vanilla bean ice cream topped with whipped cream and chocolate sauce
+                    a rich, molten chocolate encased in a velvety, moist cake shell 
                   </p>
                   <div class="options">
                     <h6>
