--- a/menu.html
+++ b/menu.html
@@ -804,11 +804,11 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/ultimate-loaded-crispy-potato-skins-recipe_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Potato Skins
+                   Loaded Potato Skins
                   </h5>
                   <p>
                     Loaded with Cheddar and Mozzarella cheeses, sprinkled with bacon bits, sour cream on the side.
@@ -900,7 +900,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Another New Item Name
+                    Sliders
                   </h5>
                   <p>
                     Description of another new item goes here. You can provide details about the ingredients, cooking method, and any other relevant information.
@@ -927,7 +927,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Another New Item Name
+                    Pretzel Bites
                   </h5>
                   <p>
                     Description of another new item goes here. You can provide details about the ingredients, cooking method, and any other relevant information.
@@ -954,7 +954,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Another New Item Name
+                    Mac N Cheese
                   </h5>
                   <p>
                     Description of another new item goes here. You can provide details about the ingredients, cooking method, and any other relevant information.
@@ -981,7 +981,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Another New Item Name
+                    Pretzel Burger
                   </h5>
                   <p>
                     Description of another new item goes here. You can provide details about the ingredients, cooking method, and any other relevant information.
