--- a/menu.html
+++ b/menu.html
@@ -568,7 +568,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/burger1.png" alt="">
+                  <img src="images/Tomahawk_Steak_500x286.webp" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -977,7 +977,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/Placeholder.png" alt="Another Appetizer Image">
+                  <img src="images/habitburgergrillpretzelburger_500x286.webp" alt="Another Appetizer Image">
                 </div>
                 <div class="detail-box">
                   <h5>
