--- a/menu.html
+++ b/menu.html
@@ -122,6 +122,7 @@
   <section class="food_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
+
         <h2>
           Our Menu
         </h2>
@@ -142,6 +143,7 @@
       <div class="filters-content">
         <div class="row grid">
           <div class="col-sm-6 col-lg-4 all burger">
+
             <div class="box">
               <div>
                 <div class="images">
@@ -152,8 +154,7 @@
                     Black & Blue Burger
                   </h5>
                   <p>
-                    Lean ground beef cooked to order, blackened, and topped with Bleu cheese crumbles. Served on rye with Swiss, grilled onions, lettuce, and tomato. Finished with bleu cheese dressing
-                  </p>
+                    Blackened Bleu Cheese Burger on Rye with Swiss, Grilled Onions, Lettuce, Tomato, and Bleu Cheese Dressing                  </p>
                   <div class="options">
                     <h6>
                       $11.49
@@ -245,8 +246,7 @@
                     Mediterranean Salad
                   </h5>
                   <p>
-                    Chopped romaine tossed with vinaigrette dressing, black and green olives, diced tomatoes, red onions, pepperoncini, and topped with Feta cheese
-                  </p>
+                    Chopped romaine, black and green olives, diced tomatoes, red onions, pepperoncini, and Feta tossed in dressing                  </p>
                   <div class="options">
                     <h6>
                       $8.99
@@ -343,8 +343,7 @@
                     French Fries
                   </h5>
                   <p>
-                    Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
-                  </p>
+                    Golden Crispy Idaho Russet Potato Fries, perfectly fried and served with your choice of delectable dipping sauces.                  </p>
                   <div class="options">
                     <h6>
                       $3.99
@@ -389,8 +388,7 @@
                     Taco Salad
                   </h5>
                   <p>
-                    Shredded iceberg over tortilla chips, topped with tomatoes, onions, Cheddar cheese, chives, and black olives. Sour cream and salsa on the side. Choice of:
-                    Chicken, Ground Beef
+                   Iceberg, tortilla chips, tomatoes, onions, Cheddar, chives, black olives. Served with sour cream, salsa, and chicken.
                   </p>
                   <div class="options">
                     <h6>
@@ -510,7 +508,7 @@
                     Coleslaw
                   </h5>
                   <p>
-                    chopped raw cabbage, carrots, and onions, with creamy rich mayonnaise
+                    Chopped raw cabbage, crisp carrots, and savory onions blend in a lusciously creamy mayonnaise.
                   </p>
                   <div class="options">
                     <h6>
@@ -545,8 +543,7 @@
             </div>
           </div>
          </div>
-<div class="filters-content">
-        <div class="row grid">
+        <div class="row 3 ">
           <div class="col-sm-6 col-lg-4 all Steaks">
             <div class="box">
               <div>
@@ -558,8 +555,7 @@
                     Tomahawk
                   </h5>
                   <p>
-                    a colossal, bone-in ribeye offering a mouthwatering blend of golden-brown crust, and melt-in-your-mouth tenderness, cooked to your preference.
-                  </p>
+                    "Colossal bone-in ribeye with a golden-brown crust, cooked to perfection                  </p>
                   <div class="options">
                     <h6>
                       $54.99
@@ -841,8 +837,7 @@
                     Chicken Sandwich
                   </h5>
                   <p>
-                    A hand breaded chicken breast with your choice of sliced melted cheese, and crinkle pickles.
-                  </p>
+                    Hand-breaded chicken breast, your choice of melted cheese, crinkle pickles, and our signature sauce on a toasted bun.                  </p>
                   <div class="options">
                     <h6>
                       $13.99
