Revert "Update menu.html"
This reverts commit 8bb24d8c6ee840538c445afe44b96afd9b182793.

--- a/menu.html
+++ b/menu.html
@@ -122,7 +122,6 @@
   <section class="food_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
-
         <h2>
           Our Menu
         </h2>
@@ -143,7 +142,6 @@
       <div class="filters-content">
         <div class="row grid">
           <div class="col-sm-6 col-lg-4 all burger">
-
             <div class="box">
               <div>
                 <div class="images">
@@ -154,7 +152,8 @@
                     Black & Blue Burger
                   </h5>
                   <p>
-                    Blackened Bleu Cheese Burger on Rye with Swiss, Grilled Onions, Lettuce, Tomato, and Bleu Cheese Dressing                  </p>
+                    Lean ground beef cooked to order, blackened, and topped with Bleu cheese crumbles. Served on rye with Swiss, grilled onions, lettuce, and tomato. Finished with bleu cheese dressing
+                  </p>
                   <div class="options">
                     <h6>
                       $11.49
@@ -246,7 +245,8 @@
                     Mediterranean Salad
                   </h5>
                   <p>
-                    Chopped romaine, black and green olives, diced tomatoes, red onions, pepperoncini, and Feta tossed in dressing                  </p>
+                    Chopped romaine tossed with vinaigrette dressing, black and green olives, diced tomatoes, red onions, pepperoncini, and topped with Feta cheese
+                  </p>
                   <div class="options">
                     <h6>
                       $8.99
@@ -343,7 +343,8 @@
                     French Fries
                   </h5>
                   <p>
-                    Golden Crispy Idaho Russet Potato Fries, perfectly fried and served with your choice of delectable dipping sauces.                  </p>
+                    Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
+                  </p>
                   <div class="options">
                     <h6>
                       $3.99
@@ -388,7 +389,8 @@
                     Taco Salad
                   </h5>
                   <p>
-                   Iceberg, tortilla chips, tomatoes, onions, Cheddar, chives, black olives. Served with sour cream, salsa, and chicken.
+                    Shredded iceberg over tortilla chips, topped with tomatoes, onions, Cheddar cheese, chives, and black olives. Sour cream and salsa on the side. Choice of:
+                    Chicken, Ground Beef
                   </p>
                   <div class="options">
                     <h6>
@@ -508,7 +510,7 @@
                     Coleslaw
                   </h5>
                   <p>
-                    Chopped raw cabbage, crisp carrots, and savory onions blend in a lusciously creamy mayonnaise.
+                    chopped raw cabbage, carrots, and onions, with creamy rich mayonnaise
                   </p>
                   <div class="options">
                     <h6>
@@ -543,7 +545,8 @@
             </div>
           </div>
          </div>
-        <div class="row 3 ">
+<div class="filters-content">
+        <div class="row grid">
           <div class="col-sm-6 col-lg-4 all Steaks">
             <div class="box">
               <div>
@@ -555,7 +558,8 @@
                     Tomahawk
                   </h5>
                   <p>
-                    "Colossal bone-in ribeye with a golden-brown crust, cooked to perfection                  </p>
+                    a colossal, bone-in ribeye offering a mouthwatering blend of golden-brown crust, and melt-in-your-mouth tenderness, cooked to your preference.
+                  </p>
                   <div class="options">
                     <h6>
                       $54.99
@@ -837,7 +841,8 @@
                     Chicken Sandwich
                   </h5>
                   <p>
-                    Hand-breaded chicken breast, your choice of melted cheese, crinkle pickles, and our signature sauce on a toasted bun.                  </p>
+                    A hand breaded chicken breast with your choice of sliced melted cheese, and crinkle pickles.
+                  </p>
                   <div class="options">
                     <h6>
                       $13.99
