--- a/menu.html
+++ b/menu.html
@@ -149,10 +149,10 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Black & Blue Burger
+                    Black & Blue Burger        
                   </h5>
                   <p>
-                    Blackened lean ground beef, Bleu cheese crumbles, Swiss, grilled onions, lettuce, tomato on rye with bleu cheese dressing.
+                     blackened lean beef, Bleu cheese, Swiss, grilled onions, crisp lettuce, and ripe tomato, all nestled on rye and crowned with luscious bleu cheese dressing.
                   </p>
                   <div class="options">
                     <h6>
@@ -198,7 +198,7 @@
                     BBQ Bacon Cheddar Burger
                   </h5>
                   <p>
-                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, and grilled onions on a white bun               
+                    Savor our custom-cooked lean ground beef, bacon-trimmed, with BBQ, cheddar, lettuce, tomato, and grilled onions on a soft white bun.
                     <p>  
                     </p>   
                   </p>   
