--- a/menu.html
+++ b/menu.html
@@ -773,7 +773,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Loaded Tater Tots
+                    Chicken Wings
                   </h5>
                   <p>
                     golden-brown crispy tots, cheddar cheese, crispy bacon, green onions, and a side of sour cream
@@ -819,7 +819,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                   Loaded Potato Skins
+                   Fried Pickles
                   </h5>
                   <p>
                     Loaded with Cheddar and Mozzarella cheeses, sprinkled with bacon bits, sour cream on the side.
