--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/burger1.png" alt="">
+                  <img src="images/Black_n_bleu_burger_500x285.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -950,9 +950,10 @@
 <div class="item">
   <div class="box">
     <div class="detail-box">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-      <h6>Moana Michell</h6>
-      <p>magna aliqua</p>
+      <p>Game Day Grill is an absolute delight for sports enthusiasts and food lovers alike! From the moment you step in, the vibrant atmosphere creates a perfect game day experience. The staff is not only friendly and attentive but also incredibly knowledgeable about the menu, helping us navigate through their extensive offerings. The diverse menu is a culinary touchdown, featuring a winning combination of classic favorites and innovative twists.</p>
+      <h6>Luis Castellanos Marroquin
+      </h6>
+      <p></p>
     </div>
   </div>
 </div>
@@ -961,9 +962,10 @@
 <div class="item">
   <div class="box">
     <div class="detail-box">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-      <h6>Mike Hamell</h6>
-      <p>magna aliqua</p>
+      <p>Game Day Grill is a true gem for any sports enthusiast and food lover alike! From the moment you step in, the vibrant atmosphere and lively energy set the perfect tone for a fantastic dining experience. The menu is a winning playbook of delicious options, with each dish delivering a touchdown of flavor. Whether you're a fan of classic pub fare or seeking a modern twist on game day staples, this restaurant has it all.</p>
+      <h6>Lydia Embry
+      </h6>
+      <p></p>
     </div>
   </div>
 </div>
@@ -972,9 +974,11 @@
 <div class="item">
   <div class="box">
     <div class="detail-box">
-      <p>New customer feedback here...</p>
-      <h6>New Customer Name</h6>
-      <p>Additional information...</p>
+      <p>
+        Game Day Grill is an absolute gem for any sports enthusiast or food lover! From the moment you step in, the vibrant atmosphere filled with cheering fans and the aroma of delicious, sizzling dishes sets the perfect stage for an unforgettable dining experience. </p>
+      <h6>Srijan Gurung
+      </h6>
+      <p></p>
     </div>
   </div>
 </div>
