--- a/menu.html
+++ b/menu.html
@@ -669,7 +669,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all Sides">
+          <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
                 <div class="images">
@@ -695,7 +695,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all Sides">
+          <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
                 <div class="images">
@@ -1072,33 +1072,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all appetizers">
-            <div class="box">
-                <div>
-                    <div class="images">
-                        <img src="images/Placeholder.png" alt="Another Appetizer Image">
-                    </div>
-                    <div class="detail-box">
-                        <h5>
-                            Mac and cheese
-                        </h5>
-                        <p>
-                            Description of another new item goes here. You can provide details about the ingredients, cooking method, and any other relevant information.
-                        </p>
-                        <div class="options">
-                            <h6>
-                                $Y.YY <!-- Replace with the actual price -->
-                            </h6>
-                            <a href="#">
-                                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                                    <!-- SVG Path for your icon -->
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
              
         </section>
 
