--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
+      <li class="nav-item active">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -82,6 +83,7 @@
           More
         </a>
         <li class="nav-item active">
+
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMore">
           <a class="dropdown-item" href="team.html">Team</a>
           <a class="dropdown-item" href="contact.html">Contact</a>
@@ -100,6 +102,8 @@
   </div>
   </header>
   <!-- end header section -->
+  <section class="contact_section ">
+    
 
 
 
@@ -113,6 +117,7 @@
 
 
   <!-- footer section -->
+  
   <footer class="footer_section">
     <div class="container">
       <div class="row">
